B-F Sandbox Full-Backup/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>Used by CRM.
NPA Rollout: Used to store the Customer Account Number.</description>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <description>This is the official registered business name.</description>
        <label>Legal Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licence__c</fullName>
        <label>Licence</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listings_whse__c</fullName>
        <description>Listings from 22 BF-products</description>
        <inlineHelpText>Listings from 22 BF-products (A,B,C)</inlineHelpText>
        <label>Listings</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyality_whse__c</fullName>
        <description>Loyality</description>
        <label>Loyality</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing__c</fullName>
        <label>Mailing</label>
        <picklist>
            <picklistValues>
                <fullName>yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Majority_Independent__c</fullName>
        <description>FDC-PLFC</description>
        <label>Majority Independent?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Management_Directors__c</fullName>
        <description>FDC-PLFC</description>
        <label># Management Directors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mandatory_Retirement_Age__c</fullName>
        <description>FDC-PLFC</description>
        <label>Mandatory Retirement Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Cap_m__c</fullName>
        <description>FDC-PLFC</description>
        <formula>Market_Capitalization__c  / 1000000</formula>
        <label>Market Cap (M)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Capitalization__c</fullName>
        <description>FDC-PLFC</description>
        <inlineHelpText>price per share * number of shares outstanding rounded to 0 decimals</inlineHelpText>
        <label>Market Capitalization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Type__c</fullName>
        <description>FDC-GD</description>
        <label>Market Type</label>
        <picklist>
            <picklistValues>
                <fullName>Air Duty-Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duty-Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Economy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Economy &amp; Duty Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local &amp; Duty-Free &amp; Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Retail</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by CRM.
NPA Rollout: Used to store the Market reference.</description>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_data_maintained__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PARX - Jochen Schrader - P00004 requirement regarding master data verification by sales rep</description>
        <label>Master data maintained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_data_verification__c</fullName>
        <defaultValue>&quot;Please maintain master date and check the checkbox &apos;Master data verified&apos;&quot;</defaultValue>
        <description>PARX- Jochen Schrader - P00004</description>
        <label>Master data verification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moderate_Trader_Name_TD__c</fullName>
        <description>Moderate Trader Name</description>
        <label>Moderate Trader Name</label>
        <picklist>
            <controllingField>Trading_Company_Name_TD__c</controllingField>
            <picklistValues>
                <fullName>Aktiv &amp; Irma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auperle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bächner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barwig</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bela C+C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boekhoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borgmann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breidohr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brüggemeier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buchbauer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bungert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkowski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buschkühle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buschmeyer &amp; Bremke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C+C Mayen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cramer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czaikowski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dalinger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dilinger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dornseifer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dütmann-Gartmann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edeka EHG Neumünster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ehlers</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>National_Head_Office_Name_TD__c</fullName>
        <description>National Head Office Name</description>
        <inlineHelpText>Please select the National Head office</inlineHelpText>
        <label>National Head Office Name</label>
        <picklist>
            <picklistValues>
                <fullName>EDEKA-Gruppe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro-Gruppe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rewe-Gruppe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schwarz-Gruppe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-keine-</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nominating_Committee_all_independent__c</fullName>
        <description>FDC-PLFC</description>
        <inlineHelpText>Nominating committee entirely independent.</inlineHelpText>
        <label>Nominating Committee all independent</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Customers_whse__c</fullName>
        <description>Number of Customers (i.e. &gt; 500)</description>
        <label>Number of Customers</label>
        <picklist>
            <picklistValues>
                <fullName>&gt; 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; = 0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <description>Objectives for Upcoming Outlet Visits</description>
        <inlineHelpText>Enter objectives for upcoming outlet visits</inlineHelpText>
        <label>Objectives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Off_Segment__c</fullName>
        <label>Off Segment</label>
        <picklist>
            <picklistValues>
                <fullName>T1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Type__c</fullName>
        <description>FDC-GD</description>
        <inlineHelpText>Select Office Type</inlineHelpText>
        <label>Office Type</label>
        <picklist>
            <picklistValues>
                <fullName>Americas/NAFTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>On_Segment__c</fullName>
        <label>On Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operating_Day_Times__c</fullName>
        <description>Enter establishment operating day&apos;s &amp; times (i.e. Mon-Fri 9-5)</description>
        <inlineHelpText>Enter establishment operating day&apos;s &amp; times (i.e. Mon-Fri 9-5)</inlineHelpText>
        <label>Operating Day/Times</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Direct or indirect order through a wholesaler.</description>
        <inlineHelpText>Select this field if the goods are to be delivered from the warehouse.</inlineHelpText>
        <label>Order Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Fax__c</fullName>
        <label>Other Fax</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Non_Independent_Directors__c</fullName>
        <description>FDC-PLFC</description>
        <label># Other Non-Independent Directors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <description>FDC_GD: Used to capture additional phone numbers</description>
        <inlineHelpText>Enter Other Phone Number(s)</inlineHelpText>
        <label>Other Phone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlet_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Class</label>
        <referenceTo>Outlet_Class__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAS_Relevant__c</fullName>
        <description>NPA Rollout: Used to denote whether the account should be available for allocation or not.</description>
        <label>PAS Relevant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PE_Ratio__c</fullName>
        <description>FDC-PLFC</description>
        <label>P/E Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_Related_Facts_whse__c</fullName>
        <description>Performance Related Facts</description>
        <inlineHelpText>Please, type in informations about suitability for storage;  transportabilityand the option for online mail order!</inlineHelpText>
        <label>Performance Related Facts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Visit_Day_Time__c</fullName>
        <description>Enter the Preferred (Day’s/ Time) for visit (i.e. Mon-Fri 1-3)</description>
        <inlineHelpText>Enter the Preferred (Day’s/ Time) for visit (i.e. Mon-Fri 1-3)</inlineHelpText>
        <label>Preferred Visit - Day/Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Presale__c</fullName>
        <label>Presale</label>
        <picklist>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flyer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Price_Statistic_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Infowelders</description>
        <label>Price Statistic Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <description>Primary Contact for Japan B2B</description>
        <label>Primary Contact</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Margin__c</fullName>
        <description>FDC-PLFC</description>
        <label>Profit Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Proxy_Filing_Month__c</fullName>
        <description>FDC-PLFC</description>
        <label>Proxy Filing Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quality_of_customers_whse__c</fullName>
        <description>Quality of customers</description>
        <label>Quality of customers</label>
        <picklist>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no information available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_Number__c</fullName>
        <description>FDC-GD</description>
        <inlineHelpText>Select Region Number</inlineHelpText>
        <label>Region Number</label>
        <picklist>
            <picklistValues>
                <fullName>Region 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>INFOWELDERS</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>TWN North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWN South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWN Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas – Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central / Eastern Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dusan Savic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Accardo – Prague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monte Wilson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Europe – Dirk Sass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No. America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region 2 – VP – Thomas Hinrichs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region 4 – VP – Joe Manero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region 5 – VP – Andrew Wilby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUC – OPEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEMA – Endre Szabo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>So. America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHN_West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHN_South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHN_East</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remarks_for_Deletion__c</fullName>
        <label>Remarks for Deletion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remarks_to_Customer__c</fullName>
        <inlineHelpText>if possible or if available type in information about assortment catalogue/inhouse trade fair/flyer</inlineHelpText>
        <label>Remarks to Customer Related Facts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remarks_to_Presale__c</fullName>
        <inlineHelpText>in case that the customer does not work with one or all presales activities - please type in a reason (if available) and additional remaks..</inlineHelpText>
        <label>Remarks to Presale</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Number__c</fullName>
        <description>SAP Customer Number</description>
        <inlineHelpText>SAP Customer Number</inlineHelpText>
        <label>SAP Customer Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Group_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FDC-PLFC Database</description>
        <inlineHelpText>SIC Industry</inlineHelpText>
        <label>SIC Group Code</label>
        <referenceTo>SIC_Group__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIC_Group_Description__c</fullName>
        <description>FDC-PLFC Database</description>
        <formula>SIC_Group_Code__r.Industry_Title__c</formula>
        <inlineHelpText>The first 4 characters of the SIC Code, used to identify the SIC Group</inlineHelpText>
        <label>SIC Group Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Information_whse__c</fullName>
        <description>Sales Information (9l cs. YT)</description>
        <label>Sales Information</label>
        <picklist>
            <picklistValues>
                <fullName>&gt; 10.000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 1.000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; = 0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <description>Australia Specific Sales Regions</description>
        <label>Sales Region</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Australia &amp; Northern Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victoria &amp; Tasmania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Australia</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segmentation__c</fullName>
        <label>Segmentation</label>
        <picklist>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Select_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selection for delete!</description>
        <inlineHelpText>Please use/select this field if the account is no longer active or existing and hence could/should be deleted!</inlineHelpText>
        <label>Select for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shareholder_proposals_in_proxy__c</fullName>
        <description>FDC-PLFC</description>
        <label>Shareholder proposals in proxy</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shares_Outstanding__c</fullName>
        <description>FDC-PLFC</description>
        <label>Shares Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shares_Outstanding_f__c</fullName>
        <formula>IF( Last_Trade_Price__c &gt;0,Market_Capitalization__c / Last_Trade_Price__c ,0)</formula>
        <inlineHelpText>Martket Cap divided by Last Trade Price</inlineHelpText>
        <label>Shares Outstanding (f)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_to_SAP__c</fullName>
        <description>SAP Ship-to number</description>
        <label>Ship_to (SAP)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_for_Live_POS_Goods__c</fullName>
        <description>FDC-GD</description>
        <inlineHelpText>Enter Shipping Address for Live POS Goods</inlineHelpText>
        <label>Shipping Address for Live POS Goods</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Suburb__c</fullName>
        <label>Shipping Suburb</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_of_Spirit_Department_TD__c</fullName>
        <description>Size of Spirit Department</description>
        <label>Size of Spirit Department</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Outlet_key_c__c</fullName>
        <description>...das Feld enthält das 6 - 10 stellige Betriebskennzeichen für Rewe und EDEKA Outlets
..this field contains the new 6-10 digit field for special outlet key for Rewe or EDEKA</description>
        <inlineHelpText>Bitte Betriebskennzeichen eingeben!</inlineHelpText>
        <label>Special Oulet Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed_Dial__c</fullName>
        <description>FDC-GD</description>
        <inlineHelpText>Enter Speed Dial</inlineHelpText>
        <label>Speed Dial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>INFOWELDERS</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telesales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store_Type_TD__c</fullName>
        <description>Store Type</description>
        <label>Store Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash &amp; Carry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>department store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAM [assigned]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supermarket - large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supermarket - middle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supermarket - small</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Cooperation__c</fullName>
        <label>Strategic Cooperation</label>
        <picklist>
            <picklistValues>
                <fullName>yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>